Regression: M2TS not decoding in 2.1.2
See https://forum.videolan.org/viewtopic.php?f=12&t=115317
It must be tested on OSX and Windows.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Jean-Baptiste Kempf added Severity::normal Type::bug Version::master git + 1 deleted label
added Severity::normal Type::bug Version::master git + 1 deleted label
- Jean-Baptiste Kempf changed milestone to %Bugs paradize
changed milestone to %Bugs paradize
- Jean-Baptiste Kempf assigned to @fkuehne and unassigned @MigrationBot
assigned to @fkuehne and unassigned @MigrationBot
- Author Owner
Works fine on Linux 2.1.2 and 2.2.0
- Jean-Baptiste Kempf changed the description
changed the description
- Developer
Fine on Windows
- Rafaël Carré added Component::Video: macOS / iOS / tvOS / visionOS label and removed 1 deleted label
added Component::Video: macOS / iOS / tvOS / visionOS label and removed 1 deleted label
- Developer
eedd67057b6808f4d182abb35ad441fc4c47ba3d ?
- Maintainer
You did a bisect? I do not see at all why this commit should be related. :-)
- Developer
I did not bisect, I just looked at git log -p 2.1.1..2.1.2
- Maintainer
The regression is actually between 2.1.0 and 2.1.1. :-/
- Maintainer
This is an issue with libav. Linking the same VLC code base against FFmpeg solves the issue.
- Felix Paul Kühne added Status::not VLC label
added Status::not VLC label
- Felix Paul Kühne closed
closed
This seems an issue with libdvbpsi
[0x7f0bdcc01818] ts demux warning: lost synchro [0x7f0bdcc01818] ts demux debug: skipping 4 bytes of garbage [0x7f0bdcc01818] ts demux warning: lost synchro [0x7f0bdcc01818] ts demux debug: skipping 158 bytes of garbage [0x7f0bdcc01818] ts demux warning: lost synchro [0x7f0bdcc01818] ts demux debug: skipping 120 bytes of garbage [0x7f0bdcc01818] ts demux warning: lost synchro [0x7f0bdcc01818] ts demux debug: skipping 82 bytes of garbage [0x7f0bdcc01818] ts demux warning: lost synchro [0x7f0bdcc01818] ts demux debug: skipping 44 bytes of garbage [0x7f0bdcc01818] ts demux warning: lost synchro [0x7f0bdcc01818] ts demux debug: skipping 6 bytes of garbage [0x7f0bdcc01818] ts demux warning: lost synchro [0x7f0bdcc01818] ts demux debug: skipping 160 bytes of garbage [0x7f0bdcc01818] ts demux warning: lost synchro [0x7f0bdcc01818] ts demux debug: skipping 122 bytes of garbage [0x7f0bdcc01818] ts demux warning: lost synchro [0x7f0bdcc01818] ts demux debug: skipping 84 bytes of garbage [0x7f0bdcc01818] ts demux warning: lost synchro [0x7f0bdcc01818] ts demux debug: skipping 46 bytes of garbage
Using the libav ts demuxer makes the file decodable.
- Luca Barbato removed Status::not VLC label
removed Status::not VLC label
- Luca Barbato reopened
reopened
to be noted
[0x7f0bdce0f198] packetizer_h264 packetizer warning: waiting for SPS/PPS
Gets printed a lot and by inspecting the code it means the packet gets dropped.
Enabling CODEC_FLAG_OUTPUT_CORRUPT makes the decoder output as expected. So looks like what the h264 packetizer outputs isn't exactly what the decoder expects.
I'll try to dump the initial packets and pin down better what's wrong.