avcodec: Always output frames

With the introduction of CODEC_FLAG_OUTPUT_CORRUPT incomplete frames
are silently dropped. Enable it to maintain the previous behaviour.

Close #10140

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>